--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
@@ -55,6 +55,11 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <httpErrors errorMode="Custom" existingResponse="Auto">
+      <clear />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Error/NotFound" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/Error" />
+    </httpErrors>
   </system.webServer>
   <system.codedom>
     <compilers>
