--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Controllers\ConfigurationController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\PagoController.cs" />
+    <Compile Include="Models\AppDbContext.cs" />
     <Compile Include="Models\Carga.cs" />
     <Compile Include="Models\Configuracion.cs" />
     <Compile Include="Controllers\HomeController.cs" />
