--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
@@ -383,6 +383,7 @@
     <Content Include="Views\Pago\DetallePago.cshtml" />
     <Content Include="Views\Configuration\Index.cshtml" />
     <Content Include="Views\Error\UnexpectedError.cshtml" />
+    <Content Include="Views\Configuration\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
