--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
@@ -384,6 +384,7 @@
     <Content Include="Views\Configuration\Index.cshtml" />
     <Content Include="Views\Error\UnexpectedError.cshtml" />
     <Content Include="Views\Configuration\Test.cshtml" />
+    <Content Include="Views\Configuration\Variables.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
