--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
@@ -385,6 +385,10 @@
     <Content Include="Views\Error\UnexpectedError.cshtml" />
     <Content Include="Views\Configuration\Test.cshtml" />
     <Content Include="Views\Configuration\Variables.cshtml" />
+    <Content Include="Views\Reporte\Aprobacion_Quincenal.cshtml" />
+    <Content Include="Views\Reporte\Detalle_Abono.cshtml" />
+    <Content Include="Views\Reporte\Index.cshtml" />
+    <Content Include="Views\Reporte\Nomina_Trabajador.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
