--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
@@ -11,7 +11,7 @@
 
   <connectionStrings>
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />-->
-    <add name="AppDbContext" connectionString="Data Source=HP-WBI;Initial Catalog=test;User ID=test;Password=1234" providerName="System.Data.SqlClient"/>
+    <add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
