--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
@@ -199,7 +199,10 @@
     <Content Include="Content\js\lib\angular.js" />
     <Content Include="Content\js\sb-admin-2.js" />
     <Content Include="Content\js\scripts\app.js" />
+    <Content Include="Content\js\scripts\constans\constants.js" />
+    <Content Include="Content\js\scripts\controllers\usuario.js" />
     <Content Include="Content\js\scripts\controllers\welcome.js" />
+    <Content Include="Content\js\scripts\services\usuario.js" />
     <Content Include="Content\vendor\bootstrap-social\bootstrap-social.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap.min.css" />
@@ -399,7 +402,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\js\scripts\services\" />
     <Folder Include="Scripts\test\" />
     <Folder Include="Views\Templates\templatesbootstrap\" />
   </ItemGroup>
