--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
@@ -297,6 +297,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="README.txt.txt" />
+    <Content Include="ScriptsBD\INSERT-CARGOS.sql" />
     <Content Include="ScriptsBD\INSERT-DIRECCION.sql" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
