--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
@@ -11,8 +11,8 @@
 
   <connectionStrings>
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />-->
-    <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />-->
-    <add name="AppDbContext" connectionString="Data Source=MANUEL-PC\SQLEXPRESS;Initial Catalog=test;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />
+    <!--<add name="AppDbContext" connectionString="Data Source=MANUEL-PC\SQLEXPRESS;Initial Catalog=test;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
