--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
@@ -28,6 +28,12 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+     <customErrors mode="On" defaultRedirect="~/Error/Index">
+        <error statusCode="404" redirect="~/Error/NotFound"/>
+        <error statusCode="403" redirect="~/Error/BadRequest"/>
+        <error statusCode="401" redirect="~/Error/Unauthorized"/>
+    </customErrors>
+      
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
