--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/ProyectoSIGNDVC.csproj
@@ -46,11 +46,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -307,7 +307,11 @@
     <Content Include="Content\Site.css" />
     <Content Include="README.txt.txt" />
     <Content Include="ScriptsBD\INSERT-CARGOS.sql" />
+    <Content Include="ScriptsBD\INSERT-CONFIGURACION.sql" />
     <Content Include="ScriptsBD\INSERT-DIRECCION.sql" />
+    <Content Include="ScriptsBD\INSERT-EMPLEADOS.sql" />
+    <Content Include="ScriptsBD\INSERT-PERSONAS.sql" />
+    <Content Include="ScriptsBD\INSERT-USUARIOS.sql" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
