--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
@@ -5,15 +5,15 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 
   <connectionStrings>
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />-->
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />-->
-    <add name="AppDbContext" connectionString="Data Source=CARLOS-PC;Initial Catalog=test;User ID=test;Password=test" providerName="System.Data.SqlClient" />
-    <!--<add name="AppDbContext" connectionString="Data Source=MANUEL-PC\SQLEXPRESS;Initial Catalog=test;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="AppDbContext" connectionString="Data Source=CARLOS-PC;Initial Catalog=test;User ID=test;Password=test" providerName="System.Data.SqlClient" />-->
+    <add name="AppDbContext" connectionString="Data Source=ADRI;Initial Catalog=test;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
@@ -29,9 +29,9 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
      <customErrors mode="On" defaultRedirect="~/Error/Index">
-        <error statusCode="404" redirect="~/Error/NotFound"/>
-        <error statusCode="403" redirect="~/Error/BadRequest"/>
-        <error statusCode="401" redirect="~/Error/Unauthorized"/>
+        <error statusCode="404" redirect="~/Error/NotFound" />
+        <error statusCode="403" redirect="~/Error/BadRequest" />
+        <error statusCode="401" redirect="~/Error/Unauthorized" />
     </customErrors>
       
   </system.web>
