--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Web.config
@@ -12,8 +12,8 @@
   <connectionStrings>
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />-->
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient" />-->
-    <!--<add name="AppDbContext" connectionString="Data Source=CARLOS-PC;Initial Catalog=test;User ID=test;Password=test" providerName="System.Data.SqlClient" />-->
-    <add name="AppDbContext" connectionString="Data Source=ADRI;Initial Catalog=test;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AppDbContext" connectionString="Data Source=CARLOS-PC;Initial Catalog=test;User ID=test;Password=test" providerName="System.Data.SqlClient" />
+    <!--<add name="AppDbContext" connectionString="Data Source=ADRI;Initial Catalog=test;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="AppDbContext" connectionString="Data Source=CARLOSII;Initial Catalog=test;User ID=carlos;Password=1234" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
